--- a/scss/style.scss
+++ b/scss/style.scss
@@ -80,7 +80,7 @@ main {
             h4 {
                 position: relative;
                 color: black;
-                background-image: linear-gradient(to right, yellow, transparent);
+                background-image: linear-gradient(to right, yellow, rgba(255, 255, 0, 0.556));
                 padding-left: 1%;
                 @include large-font;
                 @include margin-killer;
